# web_ghost

./: Cargo.toml  README.md  index.html  manifest.json  web_ghost.js
assets/: manifest.json  sw.js
src/: components.rs  fixed_point.rs  input.rs  lobby.rs  main.rs
