[package]
name = "web_ghost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.6", features = ["ggrs"] }
bevy_asset_loader = "0.16"
bevy_egui = "0.20"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
web-sys = { version = "0.3", features = ["Storage"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
bevycheck = "*"
bevy_reflect_derive = "0.10"
wasm-cookies = "0.2"
ron = "0.8"
num-integer = "*"

[patch.crates-io]
# bevy_matchbox = { path = "../third_party/matchbox/bevy_matchbox" }
bevy_matchbox = { git = "https://github.com/samcarey/matchbox.git", rev = "823aa327247ce1f83b97dd51f951d941eea4a873" }

# bevy_ggrs = { path = "../third_party/bevy_ggrs" }
bevy_ggrs = { git = "https://github.com/nobo-games/bevy_ggrs.git", rev = "05966434b905164137e5b0f118278395234dcf2e" }


# Recommended for rapier: https://rapier.rs/docs/user_guides/bevy_plugin/common_mistakes
[profile.dev.package."*"]
opt-level = 3

# Recommended for rapier: https://rapier.rs/docs/user_guides/bevy_plugin/common_mistakes
[profile.release]
codegen-units = 1
